@@ -1,3 +1,13 @@
+(09/08/14)
+==========
+
+· Added Config > WLAN Configurator
+
+(06/08/14)
+==========
+
+· Aircrack script fixed!
+
 (30/07/14)
 ==========
 
